# FastAPI-webapp

./: .env  Dockerfile  alembic.ini  database.py  dependencies.py  env.example  main.py  models.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 2cab17e07815_add_search_vector_column_and_gin_index.py  978aa1ff34a8_dummy_column.py  9c5a8717d0cd_dummy_column_remove.py  bf7792adec9c_add_refresh_tokens_rotation.py  ce3679ce8e82_modified_movies_table.py  eff5006f3c1f_add_refresh_tokens_table.py  f369f31d2029_implemting_role_based_access.py
app/: dependencies.py  main.py  models.py  redis_client.py  schemas.py  token_cleanup.py  utils.py
app/seeding/: movies.json  seed.py
routers/: .gitignore  auth.py  movies.py  reviews.py
routers/services/: admin_service.py  search_service.py
tests/: conftest.py  test_main.py
